Don't use categories in URL

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: alexford.io
 description: >- # this means to ignore newlines until "baseurl:"
   A web developer/designer/musician in Columbus Ohio, working mostly in Rails, sharing things he learns and finds interesting.
 baseurl: "/" # the subpath of your site, e.g. /blog
+permalink: /:year/:month/:day/:title:output_ext
+
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alexford
 github_username:  alexford
